--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Build
       run:  ./scripts/build-flex.sh
     - name: Flex Build & Test
-      run: flex build-test
+      run: ./.devx-workflows/flex build-test
