--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Initial Build
       run:  ./scripts/build-flex.sh
     - name: Flex Build & Test
-      run: alias flex=./.devx-workflows/flex && flex build-test
+      run: .devx-workflows/flex && flex build-test
