--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,7 +20,7 @@ archives:
       - templates/**/*
 release:
   github:
-    owner: flexport
+    owner: fp-mt
     name: devx-workflows
 github_urls:
   api: https://github.com/api/v3/
