feat: Adds basic install script.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,9 +16,12 @@ builds:
       - amd64
 archives:
   - format: tar.gz
+  - name_template: "flex_{{ .Os }}_{{ .Arch }}"
 release:
   github:
     owner: fp-mt-test-org    
     name: devx-workflows
+  extra_files:
+    - glob: ./scripts/user/install-flex.sh
 changelog:
   sort: asc
