Trying to fix the name.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,7 +16,7 @@ builds:
       - amd64
 archives:
   - format: tar.gz
-  - name_template: "flex_{{ .Os }}_{{ .Arch }}"
+#  - name_template: "flex_{{ .Os }}_{{ .Arch }}"
 release:
   github:
     owner: fp-mt-test-org    
