fix: Fix build workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Initial Build
       run:  ./scripts/build-flex.sh
     - name: Flex Build & Test
-      run: .devx-workflows/linux_amd64/flex build-test
+      run: .devx-workflows/flex build-test
     - name: Publish Release
       run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} goreleaser release --rm-dist
