Enables auto-install when building with flex and in ci initial build step.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Configure
       run: ./scripts/configure-localhost.sh
     - name: Initial Build
-      run:  ./scripts/build-flex.sh
+      run:  auto_install=true ./scripts/build-flex.sh
     - name: Flex Build & Test
       run: .devx-workflows/flex build-test
     - name: Publish Release
