--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout Source
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Setup Dev Dependencies
       run: ./scripts/setup-dev-dependencies.sh
     - name: Initial Build & Unit Test
