--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Dev Dependencies
       run: ./scripts/setup-dev-dependencies.sh
     - name: Initial Build & Unit Test
-      run:  ls -la && ls -la ./scripts && auto_install=true ./scripts/build-flex.sh
+      run:  auto_install=true ./scripts/build-flex.sh
     - name: Flex Build & Unit, Feature Test
       run: .devx-workflows/flex build-test
     - name: Publish Release
