--- a/service_config.yml
+++ b/service_config.yml
@@ -1,4 +1,4 @@
 build:
-  command: auto_install=true ./scripts/build-flex.sh
+  command: auto_install=true auto_clean=false ./scripts/build-flex.sh
 test:
   command: ./scripts/test-flex.sh
