fix: Switch from using true/false to 1/0 to improve readability / simplify.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
       run: ./scripts/setup-dev-dependencies.sh
 
     - name: Initial Build & Unit Test
-      run:  auto_install=true ./scripts/build-flex.sh
+      run:  auto_install=1 ./scripts/build-flex.sh
 
     - name: Flex Build & Unit, Feature Test
       run: .devx-workflows/flex build-test
 
     - name: Publish Release
-      run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} dry_run=false ./scripts/release-flex.sh
+      run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} dry_run=0 ./scripts/release-flex.sh
