--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,6 +12,8 @@ builds:
       - darwin
     goarch:
       - amd64
+    ldflags:
+      - -s -w -X main.FlexVersion={{ .Version }}
 archives:
   -
     name_template: "flex_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
