--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,13 @@ jobs:
         fetch-depth: 0
         
     - name: Setup Dev Dependencies
-      run: ./scripts/setup-dev-dependencies.sh
+      run: scripts/setup-dev-dependencies.sh
 
     - name: Initial Build & Unit Test
-      run:  auto_install=1 ./scripts/build-flex.sh
+      run:  auto_install=1 scripts/build-flex.sh
 
     - name: Flex Build & Unit, Feature Test
       run: .devx-workflows/flex build-test
 
     - name: Publish Release
-      run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} dry_run=0 ./scripts/release-flex.sh
+      run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} dry_run=0 scripts/release-flex.sh
