--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,7 +13,7 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -s -w -X main.FlexVersion={{ .Version }}
+      - -s -w -X devx-workflows/pkg/version.FlexVersion={{ .Version }}
 archives:
   -
     name_template: "flex_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
