--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,5 +25,6 @@ release:
     name: devx-workflows
   extra_files:
     - glob: ./scripts/user/install-flex.sh
+    - glob: ./dist/devx-workflows_*/**/*.*
 changelog:
   sort: asc
