--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,7 +6,7 @@ before:
     - go test -v -cover ./pkg/... ./flex/cmd/...
 builds:
   - main: ./flex/main.go
-    binary: flex
+    binary: "flex_{{ .Os }}_{{ .Arch }}"
     goos:
       - linux
       - darwin
@@ -25,7 +25,6 @@ release:
     name: devx-workflows
   extra_files:
     - glob: ./scripts/user/install-flex.sh
-    - glob: ./dist/devx-workflows_darwin_amd64/flex
-    - glob: ./dist/devx-workflows_linux_amd64/flex
+    - glob: ./dist/devx-workflows_*/flex*
 changelog:
   sort: asc
