feat: Adds run-flex.sh script that execute flex and also updates it on demand.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ archives:
   -
     name_template: "flex_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
     files:
-      - scripts/user/configure-localhost.sh
+      - scripts/user/*
 release:
   github:
     owner: fp-mt-test-org    
