--- a/service_config.yml
+++ b/service_config.yml
@@ -1,3 +1,7 @@
+flex:
+  version: 0.8.3
+service:
+  name: devx-workflows
 build:
   command: auto_install=1 auto_clean=0 ./scripts/build-flex.sh
 test:
