--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       run:  auto_install=1 scripts/build-flex.sh
 
     - name: Flex Build & Unit, Feature Test
-      run: .devx-workflows/scripts/user/run-flex.sh build-test
+      run: auto_update=0 .devx-workflows/scripts/user/run-flex.sh build-test
 
     - name: Publish Release
       run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} dry_run=0 scripts/release-flex.sh
